--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body{
 	margin-top: 100px;
 	background: hsl(212, 45%, 89%);
@@ -38,6 +36,7 @@ height: 330px;
 width: 225px;
 margin: auto;
 align-items: center;
+}
 text-align: center;
 justify-content: center;
 margin-top: 30px;
